<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/addFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:hint="@string/add_firstName" />

    <EditText
        android:id="@+id/addLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFirstName"
        android:hint="@string/add_lastName" />

    <EditText
        android:id="@+id/addEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addLastName"
        android:hint="@string/add_email" />

    <EditText
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addEmail"
        android:hint="@string/add_image"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_below="@+id/addImage"
        android:background="@color/edit_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="152dp"
        android:text="@string/edit_save" />

</RelativeLayout>
