<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#F6DCDC"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contactImg"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:contentDescription="contactImg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/contactFirstNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_firstName_label"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_firstName"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/contactLastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_lastName_label"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_lastName"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_email_label"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_email"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/editBtn"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_edit_border"
                    android:drawableStart="@drawable/baseline_edit_24"
                    android:drawablePadding="-10dp"
                    android:padding="3dp"
                    android:text="@string/edit_btn"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_delete_border"
                    android:drawableStart="@drawable/baseline_delete_24"
                    android:drawablePadding="-10dp"
                    android:padding="1dp"
                    android:text="@string/delete_btn"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
